[package]
name = "bevy_particles"
version = "0.1.0"
edition = "2021"
authors = ["Felix de Maneville <felix.maneville@gmail.com>"]
description = "Particle systems for Bevy engine"
license = "MIT"
keywords = ["hexagon", "bestagon", "bevy", "geometry"]
categories = ["game-development", "mathematics"]
repository = "https://github.com/ManevilleF/bevy_particles"
exclude = ["assets", "examples"]

[features]
default = []
inspector = ["bevy-inspector-egui"]

[dependencies]
itertools = "0.10"
bytemuck = { version = "1.5", features = ["derive"] }

[dependencies.rand]
version = "0.8"
default-features = false
features =  ["small_rng"]

[dependencies.bevy]
version = "0.6"
default-features = false
features = ["render"]

[dependencies.bevy-inspector-egui]
version = "0.7"
optional = true

[dev-dependencies]
bevy_fly_camera = "0.8"

[dev-dependencies.bevy]
version = "0.6"
default-features = false
features = ["render", "bevy_winit", "png"]

[[example]]
name = "basic_example"
required-features = ["inspector"]

[[example]]
name = "animated_example"
required-features = ["inspector"]