[package]
name = "bevy_particles"
version = "0.1.0"
edition = "2021"
authors = ["Felix de Maneville <felix.maneville@gmail.com>"]
description = "Particle systems for Bevy engine"
license = "MIT"
keywords = ["hexagon", "bestagon", "bevy", "geometry"]
categories = ["game-development", "mathematics"]
repository = "https://github.com/ManevilleF/bevy_particles"
exclude = ["assets", "examples", "docs"]

# Features
[features]
default = []
inspector = ["bevy-inspector-egui"]

# Deps
[dependencies]
itertools = "0.10"
bytemuck = { version = "1.5", features = ["derive"] }
noise = "0.7"

[dependencies.rand]
version = "0.8"
default-features = false
features =  ["small_rng"]

[dependencies.bevy]
version = "0.6"
default-features = false
features = ["render"]

[dependencies.bevy-inspector-egui]
version = "0.8"
optional = true

# Dev Deps
[dev-dependencies]
bevy_flycam = "0.6"

[dev-dependencies.bevy]
version = "0.6"
default-features = false
features = ["render", "bevy_winit", "png"]

# Examples

[[example]]
name = "basic_example"
required-features = ["inspector"]

[[example]]
name = "animated_example"
required-features = ["inspector"]

[[example]]
name = "explosion_example"
required-features = ["inspector"]